--- a/app/views/users/edit_bio.html.erb
+++ b/app/views/users/edit_bio.html.erb
@@ -4,7 +4,7 @@
 <div class="container">
   <div class="sign-up-container">
     <div class="sign-up-text-container">
-      <h2 class='sign-up-text'> Edit Profile Pic </h2>
+      <h2 class='sign-up-text'> Edit Bio </h2>
     </div>
     <div class="form-inputs">
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
